--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,7 @@ h1,h2,h3,h4,h5,h6,p,a {
 body {
   font-family: 'EB Garamond', serif;
   font-size: 16px;
+  overflow-y: hidden;
 }
 
 a {
@@ -24,6 +25,7 @@ a:hover {
   font-family: 'EB Garamond', serif;
   font-size: 28px;
   font-weight: 400;
+  line-height: 1.15;
 }
 
 .container {
@@ -59,7 +61,36 @@ a:hover {
   margin-right: 10px;
 }
 
-@media (max-width: 768px) {
+@media (max-width: 812px) {
+  body {
+    position: fixed;
+    overflow: hidden !important;
+  }
+}
+
+@media (max-width: 500px) {
+  body {
+    width: 100%;
+    height: 100%;
+  }
+
+  .container {
+    width: 100%;
+    height: 100%;
+  }
+
+  .content {
+    width: 100%;
+    max-width: 320px;
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    margin: 40px 5.25vw;
+  }
+
+  .main-heading {
+    line-height: 1.25;
+  }
 }
 
 
