--- a/styles.css
+++ b/styles.css
@@ -38,7 +38,7 @@ a:hover {
   max-width: 1140px;
   width: 80%;
   margin: 60px 4.25vw;
-  animation: slideup 400ms cubic-bezier(0.16, 0.05, 0, 1), fadein 1s cubic-bezier(0,0,0.2,1);;
+  animation: fadein 1s cubic-bezier(0,0,0.2,1);
 }
 
 @keyframes fadein {
@@ -47,14 +47,6 @@ a:hover {
   }
   to {
     opacity: 1;
-  }
-}
-@keyframes slideup {
-  from {
-    top: 10px;
-  }
-  to {
-    top: 0;
   }
 }
 
@@ -79,6 +71,20 @@ a:hover {
   margin-left: 0px;
   margin-right: 10px;
 }
+
+/* @media (min-width: 812px) {
+  .content {
+    animation: slideup 400ms cubic-bezier(0.16, 0.05, 0, 1), fadein 1s cubic-bezier(0,0,0.2,1);
+  }
+  @keyframes slideup {
+    from {
+      top: 10px;
+    }
+    to {
+      top: 0;
+    }
+  }
+} */
 
 @media (max-width: 812px) {
   body {
