--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,39 @@
+*,html,body {
+  cursor: none;
+}
+
+html, body {
+  height: 100%;
+}
+
+#small-circle {
+  position: fixed;
+  display: inline-block;
+  width: 5px;
+  height: 5px;
+  top: -2px;
+  left: -2px;
+  background-color: rgba(0,0,0,1);
+  border-radius: 50%;
+  pointer-events: none;
+  z-index: 9999;
+}
+
+#big-circle {
+  opacity: 0;
+  position: fixed;
+  display: inline-block;
+  width: 50px;
+  height: 50px;
+  top: -25px;
+  left: -25px;
+  border-radius: 50%;
+  border: 1px solid rgba(0,0,0,1);
+  pointer-events: none;
+  transition: 250ms cubic-bezier(0,0,0.2,1);
+  z-index: 9999;
+}
+
 h1,h2,h3,h4,h5,h6,p,a {
   -webkit-font-smoothing: antialiased !important;
 }
@@ -14,11 +50,10 @@ a {
   color: rgba(0,0,0,1);
   text-decoration: underline;
   transition: 0.25s ease-in-out;
-  cursor: pointer;
 }
 
 a:hover {
-  color: rgba(11,20,128,1);
+  color: rgba(25,0,225,1);
 }
 
 .main-heading {
@@ -72,20 +107,6 @@ a:hover {
   margin-right: 10px;
 }
 
-/* @media (min-width: 812px) {
-  .content {
-    animation: slideup 400ms cubic-bezier(0.16, 0.05, 0, 1), fadein 1s cubic-bezier(0,0,0.2,1);
-  }
-  @keyframes slideup {
-    from {
-      top: 10px;
-    }
-    to {
-      top: 0;
-    }
-  }
-} */
-
 @media (max-width: 812px) {
   body {
     position: fixed;
@@ -93,7 +114,7 @@ a:hover {
   }
 }
 
-@media (max-width: 500px) {
+@media (max-width: 450px) {
   body {
     width: 100%;
     height: 100%;
@@ -110,7 +131,7 @@ a:hover {
     position: absolute;
     left: 0;
     bottom: 0;
-    margin: 40px 5.25vw;
+    margin: 30px 5.25vw;
   }
 
   .main-heading {
@@ -118,10 +139,9 @@ a:hover {
   }
 }
 
-
 /* Canvas Things */
 #canvas-overlay {
-  background: linear-gradient(52deg, rgba(255,104,104,1) 0%, rgba(240,220,140,1) 11%, rgba(202,255,132,1) 23%, rgba(109,255,191,1) 36%, rgba(147,230,237,1) 47%, rgba(189,212,255,1) 60%, rgba(230,204,255,1) 71%, rgba(255,255,255,1) 100%);
+  background: linear-gradient(52deg, /*rgba(255,104,104,1) 0%,*/ rgba(240,220,140,1) 11%, rgba(202,255,132,1) 23%, rgba(109,255,191,1) 36%, rgba(147,230,237,1) 47%, rgba(189,212,255,1) 60%, rgba(230,204,255,1) 71%, rgba(255,255,255,1) 100%);
   position: absolute;
   top: 0;
   left: 0;
@@ -134,5 +154,6 @@ a:hover {
   top: 0;
   left: 0;
   z-index: 2;
-  opacity: 0;
+  opacity: 1;
+  mix-blend-mode: screen;
 }
