--- a/styles.css
+++ b/styles.css
@@ -18,11 +18,12 @@ html, body {
   background-color: rgba(0,0,0,1);
   border-radius: 50%;
   pointer-events: none;
+  transition: width 0.175s ease-in-out, height 0.175s ease-in-out;
   z-index: 9999;
 }
 
-#big-circle {
-  opacity: 0;
+/* #big-circle {
+  opacity: 1;
   position: fixed;
   display: inline-block;
   width: 50px;
@@ -34,11 +35,11 @@ html, body {
   pointer-events: none;
   transition: 250ms cubic-bezier(0,0,0.2,1);
   z-index: 9999;
-}
+} */
 
 /* Typography */
 
-h1,h2,h3,h4,h5,h6,p,a {
+body,h1,h2,h3,h4,h5,h6,p,a {
   -webkit-font-smoothing: antialiased !important;
 }
 
@@ -165,4 +166,13 @@ a:hover {
   z-index: 2;
   opacity: 1;
   mix-blend-mode: screen;
+}
+
+@keyframes canvas-fade-in {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }
